Limpieza del proyecto: eliminados archivos de documentación y scripts no utilizados, actualizados Dockerfiles

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -19,22 +19,14 @@ COPY src ./src
 RUN mvn clean package -DskipTests
 
 # Etapa 2: Runtime
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-jre
 WORKDIR /app
-
-# Crear usuario no-root para seguridad
-RUN addgroup -S spring && adduser -S spring -G spring
-USER spring:spring
 
 # Copiar JAR desde la etapa de build
 COPY --from=build /app/target/*.jar app.jar
 
 # Exponer puerto
 EXPOSE 8080
-
-# Configurar health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=40s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/actuator/health || exit 1
 
 # Variables de entorno por defecto
 ENV JAVA_OPTS="-Xms256m -Xmx512m"
