--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -34,6 +34,8 @@ jobs:
     - name: Ejecutar pruebas de integración
       working-directory: ./backend
       run: mvn verify -DskipUnitTests
+      env:
+        SPRING_PROFILES_ACTIVE: test
     
     - name: Ejecutar Checkstyle
       working-directory: ./backend
@@ -89,6 +91,8 @@ jobs:
     - name: Build del frontend
       working-directory: ./frontend
       run: npm run build
+      env:
+        CI: false
     
     - name: Subir build artifacts
       uses: actions/upload-artifact@v4
