fix: Corregir activación de perfil test en pipeline
- Cambiar de variable de entorno a parámetro -D en comando maven
- Usar -Dspring.profiles.active=test en lugar de SPRING_PROFILES_ACTIVE
- Esto asegura que las pruebas de integración usen H2 en lugar de PostgreSQL

Los tests E2E también fueron actualizados para usar selectores correctos
para el campo de precio tipo texto con formato COP.

--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -33,9 +33,7 @@ jobs:
     
     - name: Ejecutar pruebas de integración
       working-directory: ./backend
-      run: mvn verify -DskipUnitTests
-      env:
-        SPRING_PROFILES_ACTIVE: test
+      run: mvn verify -DskipUnitTests -Dspring.profiles.active=test
     
     - name: Ejecutar Checkstyle
       working-directory: ./backend
